--- a/LAB3/LAB3.csproj
+++ b/LAB3/LAB3.csproj
@@ -9,6 +9,7 @@
     <RootNamespace>LAB3</RootNamespace>
     <AssemblyName>LAB3</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <LangVersion>10.0</LangVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
