Add ZBufferAlgorithm realization

--- a/LAB8/LAB8.csproj
+++ b/LAB8/LAB8.csproj
@@ -79,6 +79,7 @@
     <Compile Include="PolyhedronCollection.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ZBuffer.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
