--- a/LAB8/LAB8.csproj
+++ b/LAB8/LAB8.csproj
@@ -86,6 +86,7 @@
     <Compile Include="PolyhedronCollection.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Vector3.cs" />
     <Compile Include="ZBuffer.cs" />
     <EmbeddedResource Include="CameraForm.resx">
       <DependentUpon>CameraForm.cs</DependentUpon>
