--- a/LAB8/LAB8.csproj
+++ b/LAB8/LAB8.csproj
@@ -68,6 +68,13 @@
   <ItemGroup>
     <Compile Include="AffineTransformations.cs" />
     <Compile Include="BasicClasses.cs" />
+    <Compile Include="Camera.cs" />
+    <Compile Include="CameraForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CameraForm.Designer.cs">
+      <DependentUpon>CameraForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -79,7 +86,11 @@
     <Compile Include="PolyhedronCollection.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Vector3.cs" />
     <Compile Include="ZBuffer.cs" />
+    <EmbeddedResource Include="CameraForm.resx">
+      <DependentUpon>CameraForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
