--- a/LAB9/LAB9.csproj
+++ b/LAB9/LAB9.csproj
@@ -94,6 +94,9 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormCamera.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="FormFieldDrawing.cs">
       <SubType>Form</SubType>
     </Compile>
