--- a/LAB9/LAB9.csproj
+++ b/LAB9/LAB9.csproj
@@ -105,6 +105,7 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="OBJHandler.cs" />
+    <Compile Include="PhongShading.cs" />
     <Compile Include="PolyhedronCollection.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
