--- a/LAB9/LAB9.csproj
+++ b/LAB9/LAB9.csproj
@@ -97,6 +97,9 @@
     <Compile Include="FormCamera.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="FormCamry.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="FormFieldDrawing.cs">
       <SubType>Form</SubType>
     </Compile>
