--- a/LAB9/LAB9.csproj
+++ b/LAB9/LAB9.csproj
@@ -81,6 +81,7 @@
     <Compile Include="AffineTransformations.cs" />
     <Compile Include="BackfaceCulling.cs" />
     <Compile Include="BasicClasses.cs" />
+    <Compile Include="Draw.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
