--- a/LAB9/LAB9.csproj
+++ b/LAB9/LAB9.csproj
@@ -106,6 +106,7 @@
     <Compile Include="PolyhedronCollection.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Texturing.cs" />
     <Compile Include="Vector3.cs" />
     <Compile Include="ZBuffer.cs" />
     <EmbeddedResource Include="AddFunctionGraphicForm.resx">
